Fix vertical align between section 1 and 2

--- a/Project_2/src/css/style.css
+++ b/Project_2/src/css/style.css
@@ -1,27 +1,24 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
-
+/* Обратите внимание на измения для "липкой" шапки, пометил их звездочкой ниже */
 header {
     position: relative;
-    height: 50px;
+    height: 50px; /* * */
 }
-
 nav {
-    position: fixed;
-    width: 100%;
-    width: 100%;
+    position: fixed; /* * */
+    width: 100%; /* * */
     height: 50px;
     background-color: #212121;
-    z-index: 2;
+    z-index: 2; /* * */
 }
-
 .menu {
     display: flex;
     justify-content: space-between;
     padding: 13px 70px;
     margin: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .menu .menu_link {
@@ -35,22 +32,18 @@ nav {
     padding-right: 28px;
 }
 
-.menu .menu_item:last-child {
-    border-right: none;
-}
-
 .subheader {
     position: absolute;
-    top: 50px;
+    top: 50px; /* * */
     width: 100%;
     height: 84px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0,0,0, .6);
 }
 
 .subheader .subheader_logo {
     display: block;
-    margin-top: 16px;
     max-width: 100%;
+    margin-top: 16px;
 }
 
 .subheader .subheader_official {
@@ -82,11 +75,11 @@ nav {
 
 .subheader .subheader_btn {
     margin-top: 19px;
-    border-radius: 4px;
     width: 172px;
     height: 46px;
     box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
     border: none;
+    border-radius: 4px;
     background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
     color: #ffffff;
@@ -97,10 +90,9 @@ nav {
 
 .promo {
     min-height: 800px;
-    background: url("../img/main_bg.jpg") center center/cover no-repeat;
-    padding: 151px 0 135px 0;
+    background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
+    padding: 150px 0 135px 0;
 }
-
 .promo .promo_header {
     color: #ffffff;
     font-weight: 700;
@@ -110,8 +102,7 @@ nav {
     margin: 0;
     text-align: center;
 }
-
-.promo .promo_subheader {
+.promo .promo_subheader  {
     color: #ffffff;
     font-weight: 700;
     text-transform: uppercase;
@@ -148,31 +139,24 @@ nav {
 }
 
 .reasons {
-    min-height: 900px;
-    padding: 71px 0 68px 0;
+    padding: 71px 0 65px 0;
 }
 
-.row {
-    justify-content: space-around;
-}
-
-.reasons .reasons_header {
-    display: block;
+.label {
     margin: 0 auto;
-    padding-top: 4px;
-    width: 112px;
     height: 24px;
+    width: 112px;
+    padding: 5px 12px;
     background-color: #000000;
     color: #ffffff;
     font-size: 11px;
-    font-weight: 400;
+    font-weight: 300;
     text-transform: uppercase;
-    text-align: center;
 }
 
-.reasons .reasons_list_text {
+.title {
+    margin-bottom: 0;
     margin-top: 38px;
-    margin-bottom: 40px;
     color: #222222;
     font-size: 38px;
     font-weight: 700;
@@ -180,37 +164,38 @@ nav {
     text-align: center;
 }
 
-.reasons .reason_round {
+.reasons .reasons_block {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 35px;
+}
+
+.reasons .reasons_block .reasons_round {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 26px;
     width: 113px;
     height: 113px;
     background-color: #1eacc7;
     border-radius: 100%;
-    justify-content: center;
-    align-items: center;
-    margin-right: 26px;
 }
 
-.reasons .col-md-6 {
-    display: flex;
-    margin-bottom: 35px;
+.reasons .reasons_block .reasons_descr {
+    width: 343px;
 }
 
-.reasons .reason_text {
-    max-width: 341px;
-}
-
-.reasons .reasons_name {
+.reasons .reasons_block .reasons_descr .reasons_subtitle{
     line-height: 21px;
     color: #1eacc7;
     font-size: 17px;
     font-weight: 400;
 }
 
-.reasons .reason_descr {
+.reasons .reasons_block .reasons_descr .reasons_text {
     color: #202020;
     font-size: 15px;
     font-weight: 300;
     line-height: 21px;
-    font-weight: 300;
 }
